fix(ActivityListMedia): text overflow for title and info fixed

--- a/src/components/ActivityList/ActivityList.css
+++ b/src/components/ActivityList/ActivityList.css
@@ -35,6 +35,7 @@
   justify-content: flex-start;
   align-content: flex-start;
   align-items: center;
+  box-sizing: border-box;
 
   &::before,
   &::after {
